# Kitsune

./: .env.example  CONTRIBUTING.md  Cargo.toml  GITHUB_SETUP.md  LICENSE  README.md  config.example.toml  config.toml.example  start.sh
Kitsune/: .gitignore  README.md  replit.md
Kitsune/src/: main.rs
Kitsune/src/bot/: commands.rs  commands_extra.rs  mod.rs
Kitsune/src/bot/commands/: backup.rs  help.rs  honeypot.rs  security.rs  testing.rs  whitelist.rs
Kitsune/src/database/: models.rs
Kitsune/src/security/: auto_mod.rs  behavior_analyzer.rs  mod.rs  raid_detector.rs  threat_calculator.rs
Kitsune/src/utils/: redis_client.rs
migrations/: 001_initial_schema.sql
src/bot/: events.rs
src/bot/commands/: analytics.rs  config.rs  custom.rs  integration.rs  lockdown_cmd.rs  moderation.rs  reputation.rs  stats.rs
src/config/: mod.rs
src/database/: mod.rs  queries.rs
src/security/: honeypot.rs
